base page complete working on overflow issues

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	flex-wrap: wrap;
 }
 
 .top {
@@ -39,12 +40,14 @@ h1 {
 	height: calc(100vh * (1 / 3));
 	justify-content: space-between;
 	padding-left: 20px;
-	flex: 1 1 0;
+	min-height: fit-content;
 }
 
 .warning {
-	font-size: 2rem;
+	font-size: 2vw;
 	width: 100%;
+
+	max-width: 100%;
 }
 form {
 	display: grid;
@@ -60,7 +63,7 @@ form {
 .forms {
 	background-color: rgba(3, 3, 3, 0.027);
 	box-shadow: 2px 2px rgba(3, 3, 3, 0.267);
-	flex: 1 1 0;
+	display: flex;
 }
 
 .bottom {
